--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
     "astro": "^5.17.1",
+    "astro-mermaid": "^1.3.1",
     "sharp": "^0.34.3"
   }
 }
